--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Anmol Chhabra",
   "license": "ISC",
   "engines": {
-    "node": "8.15.0"
+    "node": "18.7.0",
+    "npm": "8.15.0"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
