--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anmol Chhabra",
   "license": "ISC",
   "engines": {
-    "node": "18.7.0",
-    "npm": "8.15.0"
+    "node": "18.7.0"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
